# Tradu-o-simult-nea-

./: .gitignore  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/whisper/: whisper-cli
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/seuprojeto/translator/: AppLogger.kt  AudioCaptureManager.kt  AudioChannelManager.kt  ContextManager.kt  GeminiManager.kt  MainActivity.kt  SetupActivity.kt  SpeechManager.kt  TranslationManager.kt  WhisperLib.kt  WhisperManager.kt
app/src/main/res/anim/: pulse.xml  slide_up.xml
app/src/main/res/drawable/: btn_mic_active.xml  card_left_active.xml  card_right_active.xml  ic_speaking_left.xml  ic_swap_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_setup.xml  history_item_left.xml  history_item_right.xml
app/src/main/res/values/: strings.xml
